[package]
name = "scryptenc"
version = "0.2.1"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.57.0"
description = "An implementation of the scrypt encrypted data format"
documentation = "https://docs.rs/scryptenc"
readme = "README.md"
repository = "https://github.com/sorairolake/scryptenc-rs"
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "scrypt"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
ctr = "0.9.2"
hmac = { version = "0.12.1", features = ["std"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = { version = "0.3.1", default-features = false }
scrypt = "0.10.0"
sha2 = { version = "0.10.6", default-features = false }
thiserror = "1.0.37"
