[package]
name = "scryptenc"
version = "0.5.0"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.60.0"
description = "An implementation of the scrypt encrypted data format"
documentation = "https://docs.rs/scryptenc"
readme = "README.md"
repository = "https://github.com/sorairolake/scryptenc-rs"
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "scrypt"]
categories = ["cryptography", "no-std"]
exclude = [
  "/.github",
  "/benches",
  "/clippy.toml",
  "/examples",
  "/justfile",
  "/rustfmt.toml",
  "/tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
ctr = "0.9.2"
hmac = "0.12.1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = { version = "0.3.1", default-features = false }
scrypt = { version = "0.11.0", default-features = false }
sha2 = { version = "0.10.6", default-features = false }

[dev-dependencies]
anyhow = "1.0.66"
clap = { version = "3.2.23", features = ["derive"] }
dialoguer = { version = "0.10.2", default-features = false, features = ["password"] }

[features]
default = ["std"]
std = ["hmac/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
