# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "scryptenc-cli"
version = "0.7.13"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An utility for encrypt and decrypt files"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-or-later"
keywords = ["scrypt"]
categories = ["command-line-utilities"]
include = ["/LICENSES", "/README.md", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rscrypt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
byte-unit = "5.1.4"
clap = { workspace = true, features = ["wrap_help"] }
clap_complete = "4.5.28"
clap_complete_nushell = "4.5.3"
dialoguer.workspace = true
fraction = { version = "0.15.3", default-features = false }
humantime = "2.1.0"
once_cell = "1.20.0"
scryptenc = { version = "0.9.8", path = "../scryptenc" }
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }
sysexits = "0.8.1"
sysinfo = "0.31.4"
thiserror = "1.0.63"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]
