# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "scryptenc-cli"
version = "0.7.14"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An utility for encrypt and decrypt files"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-or-later"
keywords = ["scrypt"]
categories = ["command-line-utilities"]
include = ["/LICENSES", "/README.md", "/src"]

[[bin]]
name = "rscrypt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
byte-unit = "5.1.6"
clap = { workspace = true, features = ["wrap_help"] }
clap_complete = "4.5.47"
clap_complete_nushell = "4.5.5"
dialoguer.workspace = true
fraction = { version = "0.15.3", default-features = false }
jiff = { version = "0.2.5", default-features = false, features = ["std"] }
scryptenc = { version = "0.9.10", path = "../scryptenc" }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
sysexits = "0.9.0"
sysinfo = "0.34.1"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]

[lints]
workspace = true
