# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "scryptenc"
version = "0.9.10"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An implementation of the scrypt encrypted data format"
documentation = "https://docs.rs/scryptenc"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "scrypt"]
categories = ["cryptography", "no-std"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "decrypt"
path = "examples/decrypt.rs"
required-features = ["std"]

[[example]]
name = "encrypt"
path = "examples/encrypt.rs"
required-features = ["std"]

[[example]]
name = "info"
path = "examples/info.rs"
required-features = ["std", "serde"]

[dependencies]
aes = "0.8.4"
ctr = "0.9.2"
hmac = "0.12.1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom", "std_rng"] }
scrypt = { version = "0.11.0", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }
sha2 = { version = "0.10.9", default-features = false }

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
serde_json = "1.0.141"
serde_test = "1.0.177"

[features]
default = ["std"]
alloc = []
serde = ["dep:serde"]
std = ["alloc", "hmac/std", "scrypt/std"]

[lints]
workspace = true
