# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "scryptenc-wasm"
version = "0.2.4"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Wasm bindings for scryptenc"
documentation = "https://docs.rs/scryptenc-wasm"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "scrypt"]
categories = ["cryptography", "wasm"]
include = ["/LICENSES", "/README.md", "/src"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
scryptenc = { version = "0.9.10", path = "../scryptenc" }
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lints]
workspace = true
